--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -3,3 +3,23 @@
     <span class="line"></span>
     <span class="line"></span>
 </div>
+
+<style>
+    .hamburger {
+        padding-right: 20px;
+        cursor: pointer;
+    }
+
+    .hamburger .line {
+        display: block;
+        width: 40px;
+        height: 5px;
+        margin-bottom: 10px;
+        background-color: var(--color-accent);
+    }
+    @media screen and (min-width: 636px) {
+        .hamburger {
+            display: none;
+        }
+    }
+</style>
