--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -7,3 +7,43 @@
     <a href="/blog">Blog</a>
     <a href="/tags">Tags</a>
 </div>
+
+<style>
+    .nav-links {
+        width: 100%;
+        top: 5rem;
+        left: 48px;
+        display: none;
+        margin: 0;
+    }
+
+    .nav-links a {
+        display: block;
+        text-align: center;
+        padding: 10px 0;
+        text-decoration: none;
+        font-size: 1.2rem;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    .nav-links a:hover,
+    a:focus {
+        background-color: var(--color-accent);
+    }
+
+    @media screen and (min-width: 636px) {
+        .nav-links {
+            margin-left: 5em;
+            display: block;
+            position: static;
+            width: auto;
+            background: none;
+        }
+
+        .nav-links a {
+            display: inline-block;
+            padding: 15px 20px;
+        }
+    }
+</style>
