--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -4,31 +4,25 @@ const { tags } = Astro.props;
 
 <div class="tags">
     {
-        tags.map((tag: string) => (
-            <p class="tag">
-                <a href={`/tags/${tag}`}>{tag}</a>
-            </p>
+        tags.map((tag: string, idx: number) => (
+            <a href={`/tags/${tag}`}>#{tag}</a>
         ))
     }
 </div>
 
 <style>
     a {
-        color: #00539f;
+        color: var(--color-text);
     }
 
     .tags {
         display: flex;
         flex-wrap: wrap;
         margin: 0 auto;
+        gap: 0.5em;
     }
 
     .tag {
-        margin: 0.25em;
-        border: dotted 1px #a1a1a1;
-        border-radius: 0.5em;
-        padding: 0.5em 1em;
         font-size: 1.15em;
-        background-color: #f8fcfd;
     }
 </style>
