--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -12,7 +12,7 @@ const { tags } = Astro.props;
 
 <style>
     a {
-        color: var(--color-text);
+        color: var(--color-primary-button);
     }
 
     .tags {
