--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import "@fontsource/atkinson-hyperlegible";
 import "../styles/global.css";
-import Header from "../components/Header.astro";
+import Header from "../components/Header/Header.astro";
 
 const { pageTitle } = Astro.props;
 ---
