--- a/src/components/Header/Navigation.astro
+++ b/src/components/Header/Navigation.astro
@@ -4,8 +4,7 @@
 <div class="nav-links">
     <a href="/">Home</a>
     <a href="/about">About</a>
-    <a href="/blog">Blog</a>
-    <a href="/tags">Tags</a>
+    <!-- <a href="/projects">Projects</a> -->
 </div>
 
 <style>
