--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const pageTitle = "Truls Henrik";
         {
             tags.map((tag) => (
                 <li>
-                    <a href={`/blog/tags/${tag}`}>{tag}</a>
+                    <a href={`/tags/${tag}`}>{tag}</a>
                 </li>
             ))
         }
