--- a/src/components/Header/Hamburger.astro
+++ b/src/components/Header/Hamburger.astro
@@ -15,8 +15,14 @@
         width: 40px;
         height: 5px;
         margin-bottom: 10px;
+        background-color: var(--color-primary-button);
+    }
+
+    .hamburger:hover .line,
+    .hamburger:focus .line {
         background-color: var(--color-accent);
     }
+
     @media screen and (min-width: 636px) {
         .hamburger {
             display: none;
