--- a/src/components/Header/Navigation.astro
+++ b/src/components/Header/Navigation.astro
@@ -29,7 +29,7 @@
 
     .nav-links a:hover,
     a:focus {
-        background-color: var(--color-accent);
+        color: var(--color-accent);
     }
 
     :global(.expanded) {
