--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -11,8 +11,8 @@ export async function getStaticPaths() {
     ];
 
     return uniqueTags.map((tag) => {
-        const filteredPosts = allPosts.filter((post) =>
-            post.data.tags.includes(tag)
+        const filteredPosts = allPosts.filter(
+            (post) => post.data.tags.includes(tag) && !post.data.draft
         );
         return {
             params: { tag },
