--- a/src/components/Math.astro
+++ b/src/components/Math.astro
@@ -1,8 +1,11 @@
 ---
-import katex from 'katex';
+import katex from "katex";
 
-const { formula = ''} = Astro.props;
-const html = katex.renderToString(formula, {throwOnError: false});
+const { formula = "", inline = true } = Astro.props;
+const html = katex.renderToString(formula, {
+    throwOnError: true,
+    displayMode: !inline,
+});
 ---
 
 <div class="text-center">
@@ -10,8 +13,8 @@ const html = katex.renderToString(formula, {throwOnError: false});
 </div>
 
 <link
-	rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.css"
-	integrity="sha384-WsHMgfkABRyG494OmuiNmkAOk8nhO1qE+Y6wns6v+EoNoTNxrWxYpl5ZYWFOLPCM"
-	crossorigin="anonymous"
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.css"
+    integrity="sha384-WsHMgfkABRyG494OmuiNmkAOk8nhO1qE+Y6wns6v+EoNoTNxrWxYpl5ZYWFOLPCM"
+    crossorigin="anonymous"
 />
