--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ const pageTitle = "Truls Henrik";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-    <p>Ahoy! I write about learning math and I code pretty well :)</p>
+    <p>Hallaien 👋 Jeg prøver å lage ting :)</p>
 
-    <h2>Blog Posts</h2>
+    <h2>Alle innlegg:</h2>
 
     <ul>
         {
@@ -25,7 +25,7 @@ const pageTitle = "Truls Henrik";
         }
     </ul>
 
-    <h2>Filter By Tags</h2>
+    <h2>Innlegg per tag</h2>
 
     <ul>
         {
@@ -39,12 +39,12 @@ const pageTitle = "Truls Henrik";
         }
     </ul>
 
-    <h2>Sometimes I also talk</h2>
+    <h2>Videoer</h2>
 
     <ul>
         <li>
             <a href="https://www.youtube.com/watch?v=qI64KH26kjA"
-                >2FA and why text messages aren't good enough (Norwegian)</a
+                >Tofaktorautentisering, og hvorfor SMS ikke er godt nok</a
             >
         </li>
     </ul>
