--- a/src/components/Header/Navigation.astro
+++ b/src/components/Header/Navigation.astro
@@ -2,7 +2,7 @@
 ---
 
 <div class="nav-links">
-    <a href="/">Home</a>
+    <a href="/">Hjem</a>
     <!-- <a href="/about">About</a> -->
     <!-- <a href="/projects">Projects</a> -->
 </div>
