Remove tags and descriptions from posts

--- a/src/components/Header/Navigation.astro
+++ b/src/components/Header/Navigation.astro
@@ -9,6 +9,7 @@
 
 <style>
     .nav-links {
+        font-family: "Berkeley Mono", monospace;
         width: 100%;
         top: 5rem;
         left: 48px;
