--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -4,12 +4,10 @@ import MarkdownPostLayout from "../../layouts/MarkdownPostLayout.astro";
 
 export async function getStaticPaths() {
     const blogEntries = await getCollection("posts");
-    return blogEntries
-        .filter((x) => !x.data.draft)
-        .map((entry) => ({
-            params: { slug: entry.slug },
-            props: { entry },
-        }));
+    return blogEntries.map((entry) => ({
+        params: { slug: entry.slug },
+        props: { entry },
+    }));
 }
 
 const { entry } = Astro.props;
