feat: basic view transitions
and fix hamburger button in mobile view

--- a/src/components/BlogPostLink.astro
+++ b/src/components/BlogPostLink.astro
@@ -3,5 +3,5 @@ const { slug, title } = Astro.props;
 ---
 
 <li>
-    <a href={"/blog/" + slug}>{title}</a>
+    <a href={"/blog/" + slug} transition:name={title}><h3>{title}</h3></a>
 </li>
