--- a/src/components/Header/Navigation.astro
+++ b/src/components/Header/Navigation.astro
@@ -33,7 +33,7 @@
         color: var(--color-accent);
     }
 
-    :global(.expanded) {
+    .expanded.nav-links {
         display: unset;
     }
 
