--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,30 +2,33 @@
 import "@fontsource/atkinson-hyperlegible";
 import "../styles/global.css";
 import Header from "../components/Header/Header.astro";
+import { ViewTransitions } from "astro:transitions";
 
-const { pageTitle } = Astro.props;
+export type LayoutProps = {
+  pageTitle: string;
+};
+
+const { pageTitle } = Astro.props as LayoutProps;
 ---
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="/favicon.svg" />
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css"
-            integrity="sha384-Xi8rHCmBmhbuyyhbI88391ZKP2dmfnOl4rT9ZfRI7mLTdk1wblIUnrIq35nqwEvC"
-            crossorigin="anonymous"
-        />
-        <meta name="viewport" content="width=device-width" />
-        <meta name="generator" content={Astro.generator} />
-        <title>{pageTitle}</title>
-    </head>
-    <body>
-        <Header />
-        <h1>{pageTitle}</h1>
-        <slot />
-        <script>
-            import "../scripts/menu.ts";
-        </script>
-    </body>
+  <head>
+    <ViewTransitions />
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css"
+      integrity="sha384-Xi8rHCmBmhbuyyhbI88391ZKP2dmfnOl4rT9ZfRI7mLTdk1wblIUnrIq35nqwEvC"
+      crossorigin="anonymous"
+    />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{pageTitle}</title>
+  </head>
+  <body>
+    <Header />
+    <h1 transition:name={pageTitle}>{pageTitle}</h1>
+    <slot />
+  </body>
 </html>
