--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,9 @@ const pageTitle = "Truls Henrik";
     <ul>
         <li>
             <a href="https://www.youtube.com/watch?v=qI64KH26kjA"
-                >Tofaktorautentisering, og hvorfor SMS ikke er godt nok</a
+                ><h3>
+                    Tofaktorautentisering, og hvorfor SMS ikke er godt nok
+                </h3></a
             >
         </li>
     </ul>
