--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,9 @@ const pageTitle = "Truls Henrik";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-    <h3>Hallaien 👋 Jeg prøver å lage ting :)</h3>
+    <h2>Hallaien 👋</h2>
+
+    Velkommen til min side av internett!
 
     <h2>Innlegg</h2>
 
@@ -30,6 +32,11 @@ const pageTitle = "Truls Henrik";
                     Tofaktorautentisering, og hvorfor SMS ikke er godt nok
                 </h3></a
             >
+            <li>
+                <a href="https://youtu.be/gRZKqd8GQuE">
+                    <h3>Skjema-endringer med lave skuldre</h3>
+                </a>
+            </li>
         </li>
     </ul>
 </BaseLayout>
