--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,63 +1,38 @@
 :root {
-    /* Rosé Pine Dawn */
-    --rp-base: #faf4ed;
-    --rp-surface: #fffaf3;
-    --rp-overlay: #f2e9e1;
-    --rp-muted: #9893a5;
-    --rp-subtle: #797593;
-    --rp-text: #575279;
-    --rp-love: #b4637a;
-    --rp-gold: #ea9d34;
-    --rp-rose: #d7827e;
-    --rp-pine: #286983;
-    --rp-foam: #56949f;
-    --rp-iris: #907aa9;
-    --rp-highlight-low: #f4ede8;
-    --rp-highlight-med: #dfdad9;
-    --rp-highlight-high: #cecacd;
+    --dark-green: #386641;
+    --med-green: #6a994e;
+    --med-green-alpha: #6a994e55;
+    --light-green: #a7c957;
+    --light: #f2e8cf;
+    --red: #bc4749;
+
+    --text-color: #0a0a0a;
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        /* Rosé Pine */
-        --rp-base: #191724;
-        --rp-surface: #1f1d2e;
-        --rp-overlay: #26233a;
-        --rp-muted: #6e6a86;
-        --rp-subtle: #908caa;
-        --rp-text: #e0def4;
-        --rp-love: #eb6f92;
-        --rp-gold: #f6c177;
-        --rp-rose: #ebbcba;
-        --rp-pine: #31748f;
-        --rp-foam: #9ccfd8;
-        --rp-iris: #c4a7e7;
-        --rp-highlight-low: #21202e;
-        --rp-highlight-med: #403d52;
-        --rp-highlight-high: #524f67;
-    }
-}
 html {
-    color: var(--rp-text);
-    background-color: var(--rp-base);
+    color: var(--text-color);
     font-family: "Atkinson Hyperlegible", sans-serif;
 
-    --color-primary: var(--rp-text);
-    --color-secondary: var(--rp-base);
-    --color-primary-button: var(--rp-pine);
-    --color-secondary-button: var(--rp-highlight-med);
-    --color-accent: var(--rp-gold);
-
-    --color-primary-rgb: 0, 0, 0;
-    --color-secondary-rgb: 255, 255, 255;
-    --color-primary-button-rgb: 233, 103, 153;
-    --color-secondary-button-rgb: 233, 240, 252;
-    --color-accent-rgb: 153, 233, 103;
+    background-color: var(--light-green);
+    opacity: 0.8;
+    background: linear-gradient(
+                135deg,
+                var(--med-green-alpha) 25%,
+                transparent 25%
+            ) -10px 0/ 20px 20px,
+        linear-gradient(225deg, var(--med-green) 25%, transparent 25%) -10px 0/
+            20px 20px,
+        linear-gradient(315deg, var(--med-green-alpha) 25%, transparent 25%) 0px
+            0/ 20px 20px,
+        linear-gradient(45deg, var(--med-green) 25%, var(--light-green) 25%) 0px
+            0/ 20px 20px;
 }
 
 body {
     margin: 0 auto;
     width: 100%;
+    background-color: var(--light);
+    min-height: 100vh;
     max-width: 80ch;
     padding: 1rem;
     line-height: 1.5;
@@ -70,37 +45,15 @@ body {
 h1,
 h2,
 h3,
-h4 {
+h4,
+a {
     font-family: "Berkeley Mono", monospace;
+    color: var(--red);
 }
 
 h1 {
-    color: var(--rp-love);
     margin: 1rem 0;
     font-size: 2.5rem;
-}
-
-h2 {
-    color: var(--rp-rose);
-}
-
-h3 {
-    color: var(--rp-foam);
-}
-
-h4 {
-    color: var(--rp-gold);
-}
-
-li a {
-    color: var(--color-primary-button);
-}
-
-li a:hover h3,
-li a:hover,
-li a:focus h3,
-li a:focus {
-    color: var(--color-accent);
 }
 
 /* FONTS */
