--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -4,21 +4,23 @@ import Navigation from "./Navigation.astro";
 ---
 
 <header>
-  <nav>
-    <Hamburger />
-    <Navigation />
-  </nav>
+    <nav>
+        <Hamburger />
+        <Navigation />
+    </nav>
 
-  <script>
-    function init() {
-      document.querySelector(".hamburger")?.addEventListener("click", () => {
-        const navLinks = document.querySelector(".nav-links");
-        navLinks?.classList.toggle("expanded");
-      });
-    }
+    <script>
+        function init() {
+            document
+                .querySelector(".hamburger")
+                ?.addEventListener("click", () => {
+                    const navLinks = document.querySelector(".nav-links");
+                    navLinks?.classList.toggle("expanded");
+                });
+        }
 
-    init();
+        init();
 
-    document.addEventListener("astro:after-swap", init);
-  </script>
+        document.addEventListener("astro:after-swap", init);
+    </script>
 </header>
