--- a/src/components/Header/Navigation.astro
+++ b/src/components/Header/Navigation.astro
@@ -1,9 +1,10 @@
 ---
+
 ---
 
 <div class="nav-links">
     <a href="/">Hjem</a>
-    <!-- <a href="/about">About</a> -->
+    <a href="/about">About</a>
     <!-- <a href="/projects">Projects</a> -->
 </div>
 
