--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 import "@fontsource/atkinson-hyperlegible";
 import "../styles/global.css";
 import Header from "../components/Header/Header.astro";
-import { ViewTransitions } from "astro:transitions";
+import { ClientRouter } from "astro:transitions";
 
 export type LayoutProps = {
     pageTitle: string;
@@ -13,7 +13,7 @@ const { pageTitle } = Astro.props as LayoutProps;
 
 <html lang="en">
     <head>
-        <ViewTransitions />
+        <ClientRouter />
         <meta charset="utf-8" />
         <link rel="icon" href="/favicon.svg" />
         <link
@@ -29,7 +29,9 @@ const { pageTitle } = Astro.props as LayoutProps;
     <body>
         <Header />
         <main>
-            <h1 transition:name={pageTitle}>{pageTitle}</h1>
+            <h1 style="margin-bottom: 2rem" transition:name={pageTitle}>
+                {pageTitle}
+            </h1>
             <slot />
         </main>
     </body>
