--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import { getCollection } from "astro:content";
 import BlogPostLink from "../components/BlogPostLink.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-const allPosts = await getCollection("posts");
+const allPosts = (await getCollection("posts")).filter((x) => !x.data.isDraft);
 
 const pageTitle = "Truls Henrik";
 ---
@@ -11,7 +11,7 @@ const pageTitle = "Truls Henrik";
 <BaseLayout pageTitle={pageTitle}>
     <h2>Hallaien 👋</h2>
 
-    Velkommen til min side av internett!
+    Her kan du finne greiene mine
 
     <h2>Innlegg</h2>
 
@@ -27,16 +27,38 @@ const pageTitle = "Truls Henrik";
 
     <ul>
         <li>
-            <a href="https://www.youtube.com/watch?v=qI64KH26kjA"
-                ><h3>
-                    Tofaktorautentisering, og hvorfor SMS ikke er godt nok
-                </h3></a
-            >
-            <li>
-                <a href="https://youtu.be/gRZKqd8GQuE">
-                    <h3>Skjema-endringer med lave skuldre</h3>
-                </a>
-            </li>
+            <h3>Why does <span>fetch</span> make you wait twice?</h3>
+            <ul>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=qI64KH26kjA"
+                        >Booster 2025</a
+                    >
+                </li>
+                <li>
+                    <a
+                        href="https://www.youtube.com/watch?v=o3dYQO-04WE&ab_channel=Variant"
+                        >Refill 2025</a
+                    >
+                </li>
+            </ul>
+        </li>
+        <li>
+            <h3>2FA, hvorfor SMS ikke er godt nok</h3>
+            <ul>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=qI64KH26kjA"
+                        >Felles Variantdag 2022</a
+                    >
+                </li>
+            </ul>
+        </li>
+        <li>
+            <h3>Skjema-endringer med lave skuldre</h3>
+            <ul>
+                <li>
+                    <a href="https://youtu.be/gRZKqd8GQuE"> Refill 2024 </a>
+                </li>
+            </ul>
         </li>
     </ul>
 </BaseLayout>
