--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const pageTitle = "Truls Henrik";
 
     Her kan du finne greiene mine
 
-    <h2>Innlegg</h2>
+    <!-- <h2>Innlegg</h2> -->
 
     <ul>
         {
@@ -30,7 +30,7 @@ const pageTitle = "Truls Henrik";
             <h3>Why does <span>fetch</span> make you wait twice?</h3>
             <ul>
                 <li>
-                    <a href="https://www.youtube.com/watch?v=qI64KH26kjA"
+                    <a href="https://www.boosterconf.no/2025/program/wednesday/7_lightning_talks/kongesalen_4/why-does-fetch-make-you-wait-twice/"
                         >Booster 2025</a
                     >
                 </li>
